# KinoCMS

./: .gitignore  Dockerfile  Makefile  cinema_dump.backup  cinema_dump.sql  docker-compose.yml  dump.rdb  init.sh  main.py  pyproject.toml  requirements.txt
apps/banner/: apps.py  forms.py  models.py  urls.py  views.py
apps/banner/migrations/: 0001_initial.py  0002_banneritem_bannerslider_bottombanneritem_and_more.py  0003_alter_banneritem_options_alter_bannerslider_options_and_more.py
apps/banner/templates/banner/: admin_banner_management.html
apps/cinema/: admin.py  enums.py  forms.py  models.py  translation.py  urls.py  views.py
apps/cinema/management/commands/: generate_sessions.py
apps/cinema/migrations/: 0001_initial.py  0002_initial.py  0003_alter_session_options_and_more.py  0003_rename_conditions_en_cinema_conditions_uk_and_more.py  0004_alter_cinema_created_at.py  0004_remove_movie_type2d_remove_movie_type3d_and_more.py  0005_hall_created_at_alter_hall_cinema.py  0005_movie_end_date_movie_start_date.py  0006_hall_scheme_data.py  0006_image1_seoblock1_remove_cinema_gallery_and_more.py  0007_alter_hall_unique_together_hall_description_ru_and_more.py  0008_remove_hall_rows_remove_hall_seats_per_row.py  0009_alter_hall_name_alter_hall_name_ru_and_more.py  0010_session_format.py  0011_alter_movie_description_alter_movie_description_ru_and_more.py  0012_alter_movie_description_alter_movie_description_ru_and_more.py  0013_alter_cinema_banner_alter_cinema_conditions_and_more.py  0014_alter_hall_banner.py
apps/cinema/templates/cinema/: admin_cinema_form.html  admin_cinema_list.html  admin_hall_form.html  admin_movie_form.html  admin_movie_list.html  (+6 more)
apps/core/: admin.py  forms.py  mixins.py  models.py  tasks.py  urls.py  views.py
apps/core/migrations/: 0001_initial.py  0002_initial.py  0003_gallery_name_en_gallery_name_ru_and_more.py  0003_rename_image_galleryimage_alter_gallery_options_and_more.py  0004_mailingfile_mailing_mailingrecipient.py  0004_remove_gallery_name_en_remove_gallery_name_ru_and_more.py  0005_alter_seoblock_description_alter_seoblock_keywords_and_more.py  0006_alter_seoblock_keywords.py  0007_alter_seoblock_keywords.py  0008_alter_galleryimage_image.py
apps/page/: admin.py  context_processors.py  forms.py  models.py  tests.py  translation.py  urls.py  utils.py  views.py
apps/page/migrations/: 0001_initial.py  0002_alter_pagecontacts_options_pagecontacts_is_main_and_more.py  0002_alter_pagemain_phone_number1_and_more.py  0003_alter_pageelse_slug.py  0003_auto_20251008_0756.py  0004_alter_pageelse_slug.py  0004_pagecontacts_address_en_pagecontacts_address_ru_and_more.py  0005_alter_pagenewssales_description_and_more.py  0005_rename_description_en_pageelse_description_uk_and_more.py  0006_alter_pageelse_logo.py  0006_alter_pagemain_seo_text_alter_pagemain_seo_text_ru_and_more.py  0007_pagenewssales_delete_pagenewspromos.py  0008_pagenewssales_logo.py  0009_add_slug_field.py  0010_populate_slugs.py  0011_make_slug_unique.py
apps/users/: forms.py  models.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_customuser_managers.py  0003_alter_customuser_phone_number.py  0004_alter_customuser_phone_number.py  0005_customuser_nickname.py  0007_alter_customuser_nickname.py  0008_alter_customuser_options.py
config/: celery.py  settings.py  urls.py
locale/uk/LC_MESSAGES/: django.mo  django.po
media/mailing_files/: Рассылка_-_KinoCMS.html
nginx/: nginx.conf
static/css/: base.css
static/css/admin/: common.css  forms.css  lists.css  movie-cards.css
static/css/frontend/: banners.css  booking.css  cinema-detail.css  cinema-list.css  common.css  contacts.css  content-pages.css  hall-detail.css  hero.css  movie-cards.css  search.css  sessions.css  site.css
static/js/admin/: alert-manager.js  baner-manager.js  banner-slider-manager.js  gallery-manager.js  gallery.js  hall-scheme-editor.js  language-switcher.js  logo-manager.js  poster-manager.js  slug-generator.js  status-switcher.js
templates/registration/: login.html
(+41 files in other folders)
